[gd_scene load_steps=9 format=3 uid="uid://exi1o4lttf26"]

[ext_resource type="Script" path="res://scenes/enemies/green_bettle/green_bettle.gd" id="1_ya87n"]
[ext_resource type="Texture2D" uid="uid://30vy2x1xg2n3" path="res://assets/enemies/enemies.png" id="2_ojxip"]

[sub_resource type="AtlasTexture" id="AtlasTexture_18110"]
atlas = ExtResource("2_ojxip")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5jlf"]
atlas = ExtResource("2_ojxip")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3iph"]
atlas = ExtResource("2_ojxip")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_m2d5k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18110")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5jlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3iph")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wmbe1"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6if6i"]
radius = 10.0499

[node name="green_bettle" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_ya87n")

[node name="sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_m2d5k")
animation = &"run"
autoplay = "run"

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_wmbe1")

[node name="hit_box" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="collision_shape_2d" type="CollisionShape2D" parent="hit_box"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_6if6i")

[node name="shoot_timer" type="Timer" parent="."]
one_shot = true

[node name="screen_notifier" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="hit_box" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="shoot_timer" to="." method="_on_timer_timeout"]
[connection signal="screen_exited" from="screen_notifier" to="." method="_on_screen_notifier_screen_exited"]
